--- a/formacao.html
+++ b/formacao.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <header>
+        <!-- Botão de volta a página inicial -->
         <a href="index.html">
                 <img src="imgs/home.png" alt="Casa icon" class="home">
         </a>
         <h1>Portifólio - Danieli Prado</h1>
+        <!-- Menu de navegação -->
         <nav>
             <li><a href="sobre.html">Sobre mim</a></li>
             <li><a href="formacao.html">Minha formação</a></li>
@@ -22,6 +24,7 @@
             </div>
         </nav>
     </header>
+    <!-- Informações sobre formação -->
     <main>
         <div class="container">
             <h1>Minha formação</h1>
@@ -32,8 +35,6 @@
             em que fui aprovada, em vez daquele que achava que faria.</p>
             <p>Durante o terceiro ano do ensino médio, fiz vários cursos gratuitos de programação voltados para Python, 
             incluindo os da Fundação Bradesco e também cursos no YouTube.</p>
-            <p>Também durante o terceiro ano, decidi retomar uma antiga paixão: a escrita. 
-            Por isso, procurei fazer cursos de gramática e atualmente estou no meio do curso de Escrita Criativa da PUC.</p>
         </div>
     </main>
 </body>
