--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <header>
+        <!-- Botão de volta a página inicial -->
         <a href="index.html">
             <img src="imgs/home.png" alt="Casa icon" class="home">
         </a>
-        <h1>Portifólio - Danieli Prado</h1>
+        <h1>Portfólio - Danieli Prado</h1>
+        <!-- Menu de navegação -->
         <nav>
             <li><a href="sobre.html">Sobre mim</a></li>
             <li><a href="formacao.html">Minha formação</a></li>
@@ -28,23 +30,25 @@
             <br>
             <img src="imgs/fotoCodigo.jpg" alt="Foto de um código HTML" class="imagem">
             <br>
+            <!-- Descrição do projeto -->
             <p>
-                Atividade avaliatida proposta para a diciplina Fundamentos da programação web do curso Analise e desnvolvimento de sistemas,
-                 com o objetivo de aplicar os conceitos HTML e CSS estudados na diciplina desnvolvendo um site portifólio, totalmente funcional, com no mínimo quatro links,
+                Atividade avaliativa proposta para a disciplina Fundamentos da programação web do curso Analise e desnvolvimento de sistemas,
+                 com o objetivo de aplicar os conceitos HTML e CSS estudados na disciplina desenvolvendo um site portfólio, totalmente funcional, com no mínimo quatro links,
                 conforme orientações, e publicá-lo num servidor de hospedagem gratuito.
             </p>
             </div>
     </main>
+    <!-- Espaço extra -->
     <div class="espaco">
         <p class="espaco"> espaço</p>
     </div>
+    <!-- Rodapé de contatos -->
     <footer id="contato">
             <li>Whatsapp: <a href="https://wa.me/5551999406431" target="_blank" rel="external">(51) 99940-6431</a></li>
-            
-            <br>
-            <li>Instagram: <a href="https://www.instagram.com/danielipradonunes/" target="_blank" rel="external">@danielipradonunes</a></li>
             <br>
             <li>GitHub: <a href="https://github.com/De-Prado" target="_blank" rel="external">De-Prado</a></li>
+            <br>
+            <li><a href="formulario/formularioContato.html" target="_blank" rel="external">Mensagem</a></li>
     </footer>
 </body>
 </html>
