--- a/sobre.html
+++ b/sobre.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <header>
+        <!-- Botão de volta a página inicial -->
         <a href="index.html">
                 <img src="imgs/home.png" alt="Casa icon" class="home">
         </a>
         <h1>Portifólio - Danieli Prado</h1>
+        <!-- Menu de navegação -->
         <nav>
             <li><a href="sobre.html">Sobre mim</a></li>
             <li><a href="formacao.html">Minha formação</a></li>
@@ -22,6 +24,7 @@
             </div>
         </nav>
     </header>
+    <!-- Informações sobre mim -->
     <main>
         <div class="container">
             <h1>Sobre mim</h1>
