Alteração de links

--- a/projetos.html
+++ b/projetos.html
@@ -34,7 +34,7 @@
                 <h2>Projeto - Página de login</h2>
                 <br>
                 <div class="container1">
-                <a href="https://de-prado.github.io/P-ginaLoginN-oFuncional/" target="_blank" rel="external">
+                <a href="https://danielipradonunes.github.io/P-ginaLoginN-oFuncional/" target="_blank" rel="external">
                     <img src="imgs/paginaLogin.png" alt="Página de Login" class="imagemProjeto">
                 </a>
                 </div>
@@ -44,7 +44,7 @@
                 <h2>Projeto - Página de receita</h2>
                 <br>
                 <div class="container1">
-                <a href="https://de-prado.github.io/P-ginaReceita/" target="_blank" rel="external">
+                <a href="https://danielipradonunes.github.io/P-ginaReceita/" target="_blank" rel="external">
                     <img src="imgs/paginaReceita.png" alt="Página de receita de bolo de chocolate" class="imagemProjeto">
                 </a>
                 </div>
