--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <footer id="contato">
             <li>Whatsapp: <a href="https://wa.me/5551999406431" target="_blank" rel="external">(51) 99940-6431</a></li>
             <br>
-            <li>GitHub: <a href="https://github.com/De-Prado" target="_blank" rel="external">De-Prado</a></li>
+            <li>GitHub: <a href="https://github.com/DanieliPradoNunes" target="_blank" rel="external">DanieliPradoNunes</a></li>
             <br>
-            <li><a href="formulario/formularioContato.html" target="_blank" rel="external">Mensagem</a></li>
+            <li><a href="formularioContato.html" target="_blank" rel="external">Mensagem</a></li>
     </footer>
 </body>
 </html>
